staging/service-tls.yml
# Service for expose the deployment
apiVersion: v1
kind: Service
metadata:
  name: restapi-service-tls
  annotations:
    # Specify the type of traffic accepted
    cloud.google.com/app-protocols: '{"service-port":"HTTPS"}'
     # Specify the BackendConfig to be used for the exposed ports
    cloud.google.com/backend-config: '{"default": "restapi-backendconfig"}'
    # Enables the Cloud Native Load Balancer
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP # expose the deployment as a load balancer | NodePort | ClusterIP
  selector:
    component: api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 4000
  sessionAffinity: None # None | ClientIP
