staging/service.yaml
# Service for expose the deployment
apiVersion: v1
kind: Service
metadata:
  name: restapi-service
  annotations:
    #cloud.google.com/neg: '{"ingress": true}'
    #cloud.google.com/backend-config: '{"default": "restapi-backendconfig"}'
spec:
  type: ClusterIP # expose the deployment as a load balancer | NodePort | ClusterIP
  selector:
    component: api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  sessionAffinity: None # None | ClientIP
