staging/ingress.yml
# Ingress for gke
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: restapi-service
      port:
        number: 80
